# jec2

./: README.md
AudioDevExamples2/: CMakeLists.txt  cmake_install.cmake  compile_commands.json
AudioDevExamples2/Standalone/: CMakeLists.txt  cmake_install.cmake
AudioDevExamples2/Standalone/LoadingSVG/: CMakeLists.txt  LoadingSVG.jucer  Makefile  cmake_install.cmake
AudioDevExamples2/Standalone/LoadingSVG/Source/: Main.cpp  MainComponent.h  SVGDisplay.h
AudioDevExamples2/cmake_find/: download_libtorch.cmake
